# CppWebBookManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  AppComponent.hpp  AppComponents.hpp
src/Controller/: BookController.hpp
src/Data/: Utils.hpp
src/Model/: Book.cpp  Book.hpp
src/Service/: BookService.cpp  BookService.hpp
src/components/: SwaggerComponent.hpp
src/constants/: LogFlag.hpp
src/controller/: MyController.hpp
src/dto/: DTOs.hpp
test/: MyControllerTest.cpp  MyControllerTest.hpp  tests.cpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
